fix overflow error

--- a/style1.css
+++ b/style1.css
@@ -257,7 +257,7 @@ p#main-message {
     position: relative; /* Adjusted for better structure */
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    /* overflow: hidden; */
     transform-style: preserve-3d;
 }
 
@@ -266,11 +266,10 @@ p#main-message {
     display: none;
     position: absolute;
     left: 0;
-    width: 250px;
-    height: 250px;
+    width: 400px;
+    height: 400px;
     transition: opacity 0.5s ease-in-out, transform 1s ease-in-out;
     transform: rotateY(90deg); /* Start with a 3D effect */
-    z-index: 5;
 }
 
 .carousel-item.active {
@@ -286,6 +285,7 @@ p#main-message {
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     transition: transform 0.3s ease-in-out;
+    z-index: 500;
 }
 
 .carousel-item img:hover {
@@ -415,8 +415,8 @@ p#main-message {
     }
 
     .carousel-item {
-        width: 200px;
-        height: 200px;
+        width: 300px;
+        height: 300px;
     }
 }
 
@@ -447,8 +447,8 @@ p#main-message {
     }
 
     .carousel-item {
-        width: 150px;
-        height: 150px;
+        width: 250px;
+        height: 250px;
     }
     
     .indicator {
